Fixed the image overflowing the CSS grid

--- a/src/app/views/user-info/user-info.component.scss
+++ b/src/app/views/user-info/user-info.component.scss
@@ -38,6 +38,11 @@ header {
 
 aside {
   grid-area: aside;
+  img {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+  }
 }
 
 main {
